[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/State/MoveState.gd" type="Script" id=1]
[ext_resource path="res://src/State/IdleState.gd" type="Script" id=2]
[ext_resource path="res://src/Entity/Player.gd" type="Script" id=3]
[ext_resource path="res://src/State/CrouchState.gd" type="Script" id=4]
[ext_resource path="res://assets/textures/weapons.png" type="Texture" id=5]
[ext_resource path="res://src/Entity/PlayerWeaponTexture.gd" type="Script" id=6]
[ext_resource path="res://src/State/AimState.gd" type="Script" id=7]
[ext_resource path="res://src/Entity/Aim.gd" type="Script" id=8]

[sub_resource type="SphereShape" id=1]
radius = 0.2

[sub_resource type="CapsuleShape" id=2]
radius = 0.25
height = 0.1

[sub_resource type="AtlasTexture" id=3]
flags = 2
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="Animation" id=4]
resource_name = "aim_animation"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerWeaponTexture:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerWeaponTexture:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 20 ) ]
}

[sub_resource type="Animation" id=6]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerWeaponTexture:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 100 ), Vector2( 0, 200 ) ]
}

[node name="Player" type="KinematicBody"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 3 )

[node name="UpperCollider" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.95, 0 )
shape = SubResource( 1 )

[node name="Camera" type="Camera" parent="UpperCollider"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.09279e-08, 0.25 )
current = true

[node name="Aim" type="RayCast" parent="UpperCollider/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -500 )
collision_mask = 5
script = ExtResource( 8 )

[node name="LowerCollider" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.3, 0 )
shape = SubResource( 2 )

[node name="States" type="Node" parent="."]

[node name="IdleState" type="Node" parent="States"]
script = ExtResource( 2 )

[node name="MoveState" type="Node" parent="States"]
script = ExtResource( 1 )

[node name="CrouchState" type="Node" parent="States"]
script = ExtResource( 4 )

[node name="AimState" type="Node" parent="States"]
script = ExtResource( 7 )

[node name="PlayerWeaponTexture" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 511.999
margin_bottom = 300.0
mouse_filter = 2
texture = SubResource( 3 )
expand = true
stretch_mode = 6
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle_animation"
anims/aim_animation = SubResource( 4 )
anims/idle_animation = SubResource( 5 )
anims/move_animation = SubResource( 6 )
